--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -12,9 +12,18 @@ main{
 article{
     flex: 2;
     overflow-y: auto;
+    background-color: palevioletred;
 }
 
 aside{
     flex: 1;
     overflow-y: auto;
+    background-color: blanchedalmond;
+}
+
+header{
+    border: 1px solid blue;
+}
+.logo{
+    font-size: 40px;
 }
