--- a/flexbox/3-styles.css
+++ b/flexbox/3-styles.css
@@ -379,12 +379,14 @@
     padding: 10rem 40rem 2rem 0;
   }
 
-  /* Section Latest News */
+  /* Section Latest news
+      ============================= */
   .section-latest-news .row{
     flex-direction: row-reverse;
   }
   
-  /* Section SERVICES ============================= */
+  /* Section SERVICES
+      ============================= */
   .section-services .row{
     flex-wrap: wrap;
   }
